accounts/tracker.css
@media (max-width: 576px) {
    .header-content {
        display: inline !important;
    }

    .header-tile {
        display: none !important;
    }
}

@media (min-width: 577px) {}


@media (max-width: 992px) { 
    #expedited-ground:before ,  #trucking:before{
        width: 6.9em !important;
        height: 6.9em !important;
    }

}

/* General */
body {
    padding-top: 20px;
    padding-bottom: 20px;
}

.navbar {
    margin-bottom: 20px;
}

.nav-link {
    font-size: 17px;
}

.nav-link-right {
    margin-right: 0px;
}

.header-section-right {}

.header-section-left {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    margin-top: 4.6%;
    z-index: 3;
}

.header-section-left button {
    display: inline-block !important;
    height: 46px;
    align-content: 46px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.header-section-left .contact-btn {
    background: #A7001E;
    border: 2px solid #A7001E;
    box-sizing: border-box;
    border-radius: 5px;
    color: white;
    margin-right: 15px;
}

.header-section-left .track-btn {
    border: 2px solid #A7001E;
    box-sizing: border-box;
    border-radius: 5px;
    background-color: white;
    color: #A7001E;
}

.header-right-img {}

.contact-btn h6 {
    margin-top: auto;
    margin-bottom: auto;
}

.track-btn h6 {
    margin-top: auto;
    margin-bottom: auto;
}

.header-tile {

}

.header-content {
    display: none;
}

.header-content h1,
h5 {
    padding-bottom: 15px;
}

.header-tile svg {
    width: 100% !important;
    height: auto !important;
    min-height: 384px !important;

}

.clickable-contact-btn {
    cursor: pointer;
}

.header-section-right {
    max-width: 50%;
    z-index: 1;
}

.slideshow {
    display: block;
    width: 145%;
    max-height: 385px;
    overflow-y: hidden;
    margin-left: 50%;
    transform: translateX(-50%);
}

.header-row {
    overflow: hidden;
}

.contact-link:hover {
    opacity: .5;
}

#expedited-ground:before {
    position: absolute;
    left: 0;
    top: 0em;
    width: 8em;
    height: 8em;
    content: '';
    background-image: url("http://pinegrow.com/placeholders/img10.jpg");
    z-index: 2;
    background-size: cover;
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.6);
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    margin-left: -5%;
}
#trucking:before {
    position: absolute;
    left: 0;
    top: 0em;
    width: 8em;
    height: 8em;
    content: '';
    background-image: url("http://pinegrow.com/placeholders/img10.jpg");
    z-index: 2;
    background-size: cover;
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.6);
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    margin-left: -5%;
}

.card-body {
    width: 70%;
    margin-left: 30%;
}

.services-row .col-md-6 .card {
    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
    border-radius: 50px 5px 5px 5px;
    width: 95%;
}

.card-title {
    font-family: Lustria;
    font-style: normal;
    font-weight: normal;
}

h4 {
    font-style: normal;
    font-weight: normal;
}

